create and update post

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -5,7 +5,7 @@ $lightGreen: #b9e7e7;
   justify-content: center;
 
   .container {
-    width: 1024px;
+    width: 100%;
 
     .link {
       text-decoration: none;
